랭체인 라이브러리 임포트 수정 및 requirements 수정

--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -14,5 +14,15 @@ tiktoken
 anthropic
 gguf
 llama-cpp-python
+langchain
+langchain-core
+langchain-openai
+langchain-anthropic
+langchain-community
+xformers
+bitsandbytes
+onnx
+onnxruntime
 mlx
 mlx_lm
+mlx_vlm
