--- a/requirements_windows_amd64.txt
+++ b/requirements_windows_amd64.txt
@@ -19,5 +19,7 @@ langchain-core
 langchain-openai
 langchain-anthropic
 langchain-community
+xformers
+bitsandbytes
 onnx
-onnxruntime
+onnxruntime-gpu
