--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -14,4 +14,14 @@ tiktoken
 anthropic
 gguf
 llama-cpp-python
+langchain
+langchain-core
+langchain-openai
+langchain-anthropic
+langchain-community
+xformers
+bitsandbytes
+onnx
+onnxruntime-gpu
 vllm
+triton
