--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -4,8 +4,8 @@ datasets
 safetensors
 tokenizers
 diffusers
-gradio
-torch
+gradio 
+torch --pre --index-url https://download.pytorch.org/whl/nightly/cpu
 torchvision
 torchaudio
 accelerate
@@ -19,5 +19,9 @@ langchain-core
 langchain-openai
 langchain-anthropic
 langchain-community
+bitsandbytes
 onnx
 onnxruntime
+mlx
+mlx_lm
+mlx_vlm
