--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -4,6 +4,7 @@ datasets
 safetensors
 tokenizers
 diffusers
+peft
 gradio 
 torch --pre --index-url https://download.pytorch.org/whl/nightly/cpu
 torchvision
