llama3 모델 시리즈에 langchain 시험적 도입

--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -27,6 +27,8 @@ langchain-core
 langchain-openai
 langchain-anthropic
 langchain-community
+langchain-huggingface
+langchain-ollama
 xformers
 bitsandbytes
 onnx
