OCR 기능을 위한 pytesseract를 requirements에 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ sentencepiece
 tokenizers
 diffusers
 peft
+evaluate
+jiwer
 gradio
 torch
 torchvision
 torchaudio
 accelerate
 opencv-python
+opencv-contrib-python
+pytesseract
 basicsr
 facexlib
 gfpgan
