--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -6,12 +6,16 @@ sentencepiece
 tokenizers
 diffusers
 peft
+evaluate
+jiwer
 gradio
 torch
 torchvision
 torchaudio
 accelerate
 opencv-python
+opencv-contrib-python
+pytesseract
 basicsr
 facexlib
 gfpgan
