requirements에 eva-decord 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ torchaudio
 accelerate
 opencv-python
 opencv-contrib-python
+imutils
 pytesseract
 basicsr
 facexlib
@@ -38,3 +39,4 @@ onnxruntime
 Pillow
 numpy
 websocket-client
+eva-decord
