--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -15,6 +15,7 @@ torchaudio
 accelerate
 opencv-python
 opencv-contrib-python
+imutils
 pytesseract
 basicsr
 facexlib
@@ -40,5 +41,6 @@ onnxruntime-gpu
 Pillow
 numpy
 websocket-client
+eva-decord
 vllm
 triton
