오디오 생성 기능을 위한 TTS 라이브러리를 requirements에 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ pytesseract
 pdf2image
 fasttext
 basicsr
+gtts
+pydub
+matplotlib
+scipy
 facexlib
 gfpgan
 git+https://github.com/xinntao/Real-ESRGAN.git
