--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -8,7 +8,8 @@ diffusers
 peft
 evaluate
 jiwer
-gradio 
+gradio
+regex
 torch --pre --index-url https://download.pytorch.org/whl/nightly/cpu
 torchvision
 torchaudio
