RAG를 위한 작업 준비

--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -38,6 +38,8 @@ gguf
 llama-cpp-python
 stable-diffusion-cpp-python
 ollama
+unstructured
+sentence_transformers
 langchain
 langchain-core
 langchain-openai
