--- a/requirements_macos_arm64_noxformers.txt
+++ b/requirements_macos_arm64_noxformers.txt
@@ -39,6 +39,8 @@ gguf
 llama-cpp-python
 stable-diffusion-cpp-python
 ollama
+unstructured
+sentence_transformers
 langchain
 langchain-core
 langchain-openai
