--- a/requirements_windows_amd64.txt
+++ b/requirements_windows_amd64.txt
@@ -39,6 +39,8 @@ gguf
 llama-cpp-python
 stable-diffusion-cpp-python
 ollama
+unstructured
+sentence_transformers
 langchain
 langchain-core
 langchain-openai
