requirements에 vits 구동에 필요한 라이브러리 추가

--- a/requirements_windows_amd64.txt
+++ b/requirements_windows_amd64.txt
@@ -58,3 +58,35 @@ numpy
 websocket-client
 faiss-gpu
 eva-decord
+tensorflow
+tensorboard
+keras
+tf-keras
+numba
+pytorch-lightning
+ffmpeg-python
+tqdm
+funasr
+cn2an
+pypinyin
+pyopenjtalk
+g2p_en
+modelscope
+chardet
+PyYAML
+psutil
+jieba_fast
+jieba
+split-lang
+fast_langdetect
+Faster_whisper
+wordsegment
+rotary_embedding_torch
+ToJyutping
+g2pk2
+ko_pron
+opencc
+fastapi
+x_transformers
+torchmetrics
+attrdict
