--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -57,5 +57,38 @@ numpy
 websocket-client
 faiss-gpu
 eva-decord
+tensorflow
+tensorboard
+keras
+tf-keras
+numba
+pytorch-lightning
+ffmpeg-python
+tqdm
+funasr
+cn2an
+pypinyin
+pyopenjtalk
+g2p_en
+modelscope
+chardet
+PyYAML
+psutil
+jieba_fast
+jieba
+split-lang
+fast_langdetect
+Faster_whisper
+wordsegment
+rotary_embedding_torch
+ToJyutping
+g2pk2
+ko_pron
+opencc==1.1.1
+python_mecab_ko
+fastapi
+x_transformers
+torchmetrics
+attrdict
 vllm
 triton
