--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -58,6 +58,39 @@ numpy
 websocket-client
 faiss-cpu
 eva-decord
+tensorflow
+tensorboard
+keras
+tf-keras
+numba
+pytorch-lightning
+ffmpeg-python
+tqdm
+funasr
+cn2an
+pypinyin
+pyopenjtalk
+g2p_en
+modelscope
+chardet
+PyYAML
+psutil
+jieba_fast
+jieba
+split-lang
+fast_langdetect
+Faster_whisper
+wordsegment
+rotary_embedding_torch
+ToJyutping
+g2pk2
+ko_pron
+opencc
+python_mecab_ko
+fastapi
+x_transformers
+torchmetrics
+attrdict
 mlx
 mlx_lm
 mlx_vlm
