diffusionkit 관련 소스코드 추가

--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -50,6 +50,7 @@ langchain-community
 langchain-huggingface
 langchain-ollama
 xformers
+jaxtyping
 bitsandbytes
 onnx
 onnxruntime
@@ -96,3 +97,5 @@ attrdict
 mlx
 mlx_lm
 mlx_vlm
+argmaxtools
+diffusionkit --no-deps
