--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -49,6 +49,7 @@ langchain-anthropic
 langchain-community
 langchain-huggingface
 langchain-ollama
+jaxtyping
 bitsandbytes
 onnx
 onnxruntime
@@ -94,3 +95,5 @@ attrdict
 mlx
 mlx_lm
 mlx_vlm
+argmaxtools
+diffusionkit --no-deps
