Add qwen-vl-utils and qwen-omni-utils in requirements

--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -49,6 +49,8 @@ langchain-anthropic
 langchain-community
 langchain-huggingface
 langchain-ollama
+qwen-vl-utils
+qwen-omni-utils
 jaxtyping
 bitsandbytes
 onnx
