--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,8 @@ langchain-anthropic
 langchain-community
 langchain-huggingface
 langchain-ollama
+qwen-vl-utils
+qwen-omni-utils
 onnx
 onnxruntime
 Pillow
