--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -48,6 +48,8 @@ langchain-anthropic
 langchain-community
 langchain-huggingface
 langchain-ollama
+qwen-vl-utils
+qwen-omni-utils
 xformers
 jaxtyping
 bitsandbytes
