--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -46,13 +46,14 @@ langchain
 langchain-core
 langchain-openai
 langchain-anthropic
+langchain-google-genai
 langchain-community
 langchain-huggingface
 langchain-ollama
 qwen-vl-utils
 qwen-omni-utils
 jaxtyping
-bitsandbytes
+# bitsandbytes
 onnx
 onnxruntime
 gptqmodel
@@ -60,7 +61,7 @@ Pillow
 numpy
 websocket-client
 faiss-cpu
-eva-decord
+eva-decord;  python_version < '3.12'
 tensorflow
 tensorboard
 keras
@@ -100,6 +101,7 @@ mlx_lm
 mlx_vlm
 mlx_embeddings
 mlx_whisper
+mlx_audio
 coremltools
 argmaxtools
 # diffusionkit
