--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -45,6 +45,7 @@ langchain
 langchain-core
 langchain-openai
 langchain-anthropic
+langchain-google-genai
 langchain-community
 langchain-huggingface
 langchain-ollama
@@ -60,7 +61,7 @@ Pillow
 numpy
 websocket-client
 faiss-gpu
-eva-decord
+eva-decord;  python_version < '3.12'
 tensorflow
 tensorboard
 keras
