--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -46,14 +46,15 @@ langchain
 langchain-core
 langchain-openai
 langchain-anthropic
+langchain-google-genai
 langchain-community
 langchain-huggingface
 langchain-ollama
 qwen-vl-utils
 qwen-omni-utils
-xformers
+# xformers
 jaxtyping
-bitsandbytes
+# bitsandbytes
 onnx
 onnxruntime
 gptqmodel
@@ -61,7 +62,7 @@ Pillow
 numpy
 websocket-client
 faiss-cpu
-eva-decord
+eva-decord;  python_version < '3.12'
 tensorflow
 tensorflow-metal
 tensorboard
@@ -102,6 +103,7 @@ mlx_lm
 mlx_vlm
 mlx_embeddings
 mlx_whisper
+mlx_audio
 coremltools
 argmaxtools
 # diffusionkit
