--- a/requirements_windows_amd64.txt
+++ b/requirements_windows_amd64.txt
@@ -46,6 +46,7 @@ langchain
 langchain-core
 langchain-openai
 langchain-anthropic
+langchain-google-genai
 langchain-community
 langchain-huggingface
 langchain-ollama
@@ -61,7 +62,7 @@ Pillow
 numpy
 websocket-client
 faiss-gpu
-eva-decord
+eva-decord;  python_version < '3.12'
 tensorflow
 tensorboard
 keras
