--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -62,7 +62,7 @@ Pillow
 numpy
 websocket-client
 faiss-gpu
-eva-decord;  python_version < '3.12'
+eva-decord
 tensorflow
 tensorboard
 keras
@@ -97,5 +97,11 @@ fastapi
 x_transformers
 torchmetrics
 attrdict
+wavmark
+eng_to_ipa
+inflect
+unidecode
+whisper-timestamped
+langid
 vllm
 triton
