--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -64,6 +64,7 @@ numpy
 websocket-client
 faiss-cpu
 eva-decord;  python_version < '3.12'
+eva-decord-plus; python_version == '3.12'
 tensorflow
 tensorflow-metal
 tensorboard
@@ -99,6 +100,12 @@ fastapi
 x_transformers
 torchmetrics
 attrdict
+wavmark
+eng_to_ipa
+inflect
+unidecode
+whisper-timestamped
+langid
 mlx
 mlx_lm
 mlx_vlm
