--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -106,6 +106,20 @@ inflect
 unidecode
 whisper-timestamped
 langid
+txtsplit
+cached_path
+num2words
+unidic_lite
+unidic
+mecab-python3
+pykakasi
+fugashi
+anyascii
+jamo
+gruut[de,es,fr]
+g2pkk
+loguru
+mecab
 mlx
 mlx_lm
 mlx_vlm
