Add eva-decord-plus in requirements_macos_arm64_nightly.txt

--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -63,6 +63,7 @@ numpy
 websocket-client
 faiss-cpu
 eva-decord;  python_version < '3.12'
+eva-decord-plus; python_version == '3.12'
 tensorflow
 tensorboard
 keras
