Add Llama4 support for mlx

--- a/requirements_macos_arm64.txt
+++ b/requirements_macos_arm64.txt
@@ -122,7 +122,8 @@ loguru
 mecab
 mlx
 mlx_lm
-mlx_vlm
+# mlx_vlm
+git+https://github.com/bean980310/mlx-vlm.git
 mlx_embeddings
 mlx_whisper
 mlx_audio
