--- a/requirements_macos_arm64_nightly.txt
+++ b/requirements_macos_arm64_nightly.txt
@@ -120,7 +120,8 @@ loguru
 mecab
 mlx
 mlx_lm
-mlx_vlm
+# mlx_vlm
+git+https://github.com/bean980310/mlx-vlm.git
 mlx_embeddings
 mlx_whisper
 mlx_audio
