--- a/depends/requirements_linux_amd64_amd_gpu.txt
+++ b/depends/requirements_linux_amd64_amd_gpu.txt
@@ -4,6 +4,7 @@ datasets
 safetensors
 sentencepiece
 tokenizers
+nltk
 diffusers
 peft
 trl
@@ -11,10 +12,20 @@ evaluate
 jiwer
 gradio
 regex
-torch
+torch --index-url https://download.pytorch.org/whl/rocm6.2.4
 torchvision
 torchaudio
+jax
+jaxlib
+jax[rocm]
+flax
+jinja2
+packaging
 accelerate
+optimum
+optimum-quanto
+torchao
+GitPython
 opencv-python
 opencv-contrib-python
 imutils
@@ -31,31 +42,38 @@ samplerate
 pyworld
 facexlib
 gfpgan
-git+https://github.com/xinntao/Real-ESRGAN.git
 openai
 tiktoken
 anthropic
 google-genai
 gguf
 llama-cpp-python
+stable-diffusion-cpp-python
 ollama
+lmstudio
 unstructured
 sentence_transformers
 langchain
 langchain-core
 langchain-openai
 langchain-anthropic
+langchain-google-genai
 langchain-community
 langchain-huggingface
 langchain-ollama
 qwen-vl-utils
 qwen-omni-utils
+xformers
+jaxtyping
+bitsandbytes
 onnx
-onnxruntime
+onnxruntime-gpu
+gptqmodel
 Pillow
 numpy
 websocket-client
-faiss-cpu
+faiss-gpu
+eva-decord
 tensorflow
 tensorboard
 keras
@@ -84,9 +102,31 @@ rotary_embedding_torch
 ToJyutping
 g2pk2
 ko_pron
-opencc
+opencc==1.1.1
 python_mecab_ko
 fastapi
 x_transformers
 torchmetrics
 attrdict
+wavmark
+eng_to_ipa
+inflect
+unidecode
+whisper-timestamped
+langid
+txtsplit
+cached_path
+num2words
+unidic_lite
+unidic
+mecab-python3
+pykakasi
+fugashi
+anyascii
+jamo
+gruut[de,es,fr]
+g2pkk
+loguru
+mecab
+vllm
+triton
