--- a/depends/requirements_windows_amd64_wsl2.txt
+++ b/depends/requirements_windows_amd64_wsl2.txt
@@ -4,6 +4,7 @@ datasets
 safetensors
 sentencepiece
 tokenizers
+nltk
 diffusers
 peft
 trl
@@ -11,10 +12,20 @@ evaluate
 jiwer
 gradio
 regex
-torch
+torch --index-url https://download.pytorch.org/whl/cu124
 torchvision
 torchaudio
+jax
+jaxlib
+jax[cuda12]
+flax
+jinja2
+packaging
 accelerate
+optimum
+optimum-quanto
+torchao
+GitPython
 opencv-python
 opencv-contrib-python
 imutils
@@ -38,24 +49,32 @@ anthropic
 google-genai
 gguf
 llama-cpp-python
+stable-diffusion-cpp-python
 ollama
+lmstudio
 unstructured
 sentence_transformers
 langchain
 langchain-core
 langchain-openai
 langchain-anthropic
+langchain-google-genai
 langchain-community
 langchain-huggingface
 langchain-ollama
 qwen-vl-utils
 qwen-omni-utils
+xformers
+jaxtyping
+bitsandbytes
 onnx
-onnxruntime
+onnxruntime-gpu
+gptqmodel
 Pillow
 numpy
 websocket-client
-faiss-cpu
+faiss-gpu
+eva-decord
 tensorflow
 tensorboard
 keras
@@ -85,8 +104,27 @@ ToJyutping
 g2pk2
 ko_pron
 opencc
-python_mecab_ko
 fastapi
 x_transformers
 torchmetrics
 attrdict
+wavmark
+eng_to_ipa
+inflect
+unidecode
+whisper-timestamped
+langid
+txtsplit
+cached_path
+num2words
+unidic_lite
+unidic
+mecab-python3
+pykakasi
+fugashi
+anyascii
+jamo
+gruut[de,es,fr]
+g2pkk
+loguru
+mecab
