--- a/requirements/linux_amd64_cuda_cu126/requirements_ai_models.txt
+++ b/requirements/linux_amd64_cuda_cu126/requirements_ai_models.txt
@@ -1,22 +1,22 @@
-transformers[ja, sklearn, tiktoken, serving, testing, sentencepiece, num2words, video, quality, mistral-common]>=4.55.0
-x_transformers>=2.7.0
+transformers[ja, sklearn, tiktoken, serving, testing, sentencepiece, num2words, video, quality, mistral-common]>=4.55.2
+x_transformers>=2.7.2
 sentence_transformers>=5.1.0
 datasets[audio]>=3.6.0
 safetensors>=0.6.2
 tokenizers>=0.21.4
-diffusers[docs]>=0.34.0
+diffusers[docs]>=0.35.0
 peft>=0.17.0
 trl>=0.21.0
 huggingface_hub[cli, hf_transfer, hf_xet, mcp]>=0.34.4
 k_diffusion==0.0.12
 hf_transfer>=0.1.9
 hf_xet<2.0.0
-fastrtc[vad,tts,stt]>=0.0.28
+fastrtc[vad,tts,stt]>=0.0.30
 aiortc>=1.13.0
-modelscope>=1.28.2
+modelscope>=1.29.0
 civitai-model-downloader
 evaluate>=0.4.4
-gradio[mcp]==5.42.0
+gradio[mcp]==5.43.1
 gradio_webrtc
 twilio
 mcp[cli]
@@ -27,11 +27,11 @@ groq>=0.31.0
 spaces
 facexlib>=0.3.0
 gfpgan>=1.3.8
-ultralytics==8.3.177
+ultralytics==8.3.181
 realesrgan @ git+https://github.com/xinntao/Real-ESRGAN.git
-openai>=1.99.8
-anthropic>=0.62.0
-google-genai>=1.29.0
+openai>=1.100.2
+anthropic>=0.64.0
+google-genai>=1.31.0
 mistralai
 xai-sdk
 ollama==0.5.3
@@ -65,11 +65,12 @@ llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/wh
 # llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/metal
 stable-diffusion-cpp-python
 tipo-kgen
+nexaai
 
 setuptools
 wheel
 scikit-build-core
-numpy>=2.0.2,<2.2.0
+numpy>=2.0.2
 numba>=0.60.0
 pandas>=2.0.0
 matplotlib
@@ -77,7 +78,7 @@ scikit-learn
 beautifulsoup4==4.13.4
 sympy==1.14.0
 scipy==1.16.0
-protobuf==5.29.5
+protobuf
 packaging==25.0
 fsspec==2025.3.0
 pyyaml==6.0.2
@@ -104,7 +105,7 @@ neo4j
 tensorflow
 tensorboard
 keras
-tf-keras
+# tf-keras
 torch>=2.8.0 --index-url https://download.pytorch.org/whl/cu126
 torchvision
 torchaudio
