Submodule Update apply

--- a/requirements/macos_arm64/requirements_ai_models.txt
+++ b/requirements/macos_arm64/requirements_ai_models.txt
@@ -1,11 +1,11 @@
-transformers[ja, sklearn, tiktoken, serving, testing, sentencepiece, num2words, video, quality, mistral-common]>=4.55.2
+transformers[ja, sklearn, tiktoken, serving, testing, sentencepiece, num2words, video, quality, mistral-common]>=4.55.4
 x_transformers>=2.7.2
 sentence_transformers>=5.1.0
 datasets[audio]>=3.6.0
 safetensors>=0.6.2
 tokenizers>=0.21.4
-diffusers[docs]>=0.35.0
-peft>=0.17.0
+diffusers[docs]>=0.35.1
+peft>=0.17.1
 trl>=0.21.0
 huggingface_hub[cli, hf_transfer, hf_xet, mcp]>=0.34.4
 k_diffusion==0.0.12
@@ -16,7 +16,7 @@ aiortc>=1.13.0
 modelscope>=1.29.0
 civitai-model-downloader
 evaluate>=0.4.4
-gradio[mcp]==5.43.1
+gradio[mcp]>=5.44.1
 gradio_webrtc
 twilio
 mcp[cli]
@@ -27,23 +27,23 @@ groq>=0.31.0
 spaces
 facexlib>=0.3.0
 gfpgan>=1.3.8
-ultralytics==8.3.181
+ultralytics>=8.3.189
 realesrgan @ git+https://github.com/xinntao/Real-ESRGAN.git
-openai>=1.100.2
+openai>=1.102.2
 anthropic>=0.64.0
-google-genai>=1.31.0
+google-genai>=1.32.0
 mistralai
 xai-sdk
-ollama==0.5.3
-lmstudio==1.4.1
-unstructured[pdf]==0.18.13
+ollama>=0.5.3
+lmstudio>=1.4.1
+unstructured[pdf]>=0.18.13
 langchain[community, anthropic, openai, google-genai, ollama, huggingface, perplexity, xai, mistralai]>=0.3.27
 langchain-chroma>=0.1.2
 langchain-neo4j>=0.4.0
 qwen-vl-utils
 qwen-omni-utils
-# gptqmodel
-gptqmodel @ git+https://github.com/ModelCloud/GPTQModel.git@29402342228414b81020a28a4c5b5828c1e76d59
+gptqmodel==4.0.0
+# gptqmodel @ git+https://github.com/ModelCloud/GPTQModel.git@29402342228414b81020a28a4c5b5828c1e76d59
 jiwer
 gtts>=2.5.4
 chromadb
@@ -89,7 +89,7 @@ numba>=0.60.0
 pandas>=2.0.0
 matplotlib
 scikit-learn
-beautifulsoup4==4.13.4
+beautifulsoup4==4.13.5
 sympy==1.14.0
 scipy==1.16.0
 protobuf
