--- a/requirements/windows_amd64_native_cu128/requirements.txt
+++ b/requirements/windows_amd64_native_cu128/requirements.txt
@@ -6,7 +6,7 @@ numba>=0.60.0
 pandas>=2.0.0
 matplotlib
 scikit-learn
-beautifulsoup4==4.13.4
+beautifulsoup4==4.13.5
 sympy==1.14.0
 scipy==1.16.0
 protobuf
@@ -53,7 +53,7 @@ flax
 optimum
 optimum-quanto
 torchao
-# xformers --index-url https://download.pytorch.org/whl/cu128
+xformers --index-url https://download.pytorch.org/whl/cu128
 bitsandbytes
 onnxruntime
 # faiss-cpu
