--- a/requirements/windows_amd64_wsl2_cu128/requirements_ai_models.txt
+++ b/requirements/windows_amd64_wsl2_cu128/requirements_ai_models.txt
@@ -16,7 +16,7 @@ aiortc>=1.13.0
 modelscope>=1.29.0
 civitai-model-downloader
 evaluate>=0.4.4
-gradio[mcp]==5.43.1
+gradio[mcp]>=5.43.1
 gradio_webrtc
 twilio
 mcp[cli]
@@ -27,23 +27,23 @@ groq>=0.31.0
 spaces
 facexlib>=0.3.0
 gfpgan>=1.3.8
-ultralytics==8.3.181
+ultralytics>=8.3.181
 realesrgan @ git+https://github.com/xinntao/Real-ESRGAN.git
 openai>=1.100.2
 anthropic>=0.64.0
 google-genai>=1.31.0
 mistralai
 xai-sdk
-ollama==0.5.3
-lmstudio==1.4.1
-unstructured[pdf]==0.18.11
+ollama>=0.5.3
+lmstudio>=1.4.1
+unstructured[pdf]>=0.18.11
 langchain[community, anthropic, openai, google-genai, ollama, huggingface, perplexity, xai, mistralai]>=0.3.27
 langchain-chroma>=0.1.2
 langchain-neo4j>=0.4.0
 qwen-vl-utils
 qwen-omni-utils
-# gptqmodel
-gptqmodel @ git+https://github.com/ModelCloud/GPTQModel.git@29402342228414b81020a28a4c5b5828c1e76d59
+gptqmodel==4.0.0
+# gptqmodel @ git+https://github.com/ModelCloud/GPTQModel.git@29402342228414b81020a28a4c5b5828c1e76d59
 jiwer
 gtts>=2.5.4
 chromadb
@@ -75,7 +75,7 @@ numba>=0.60.0
 pandas>=2.0.0
 matplotlib
 scikit-learn
-beautifulsoup4==4.13.4
+beautifulsoup4==4.13.5
 sympy==1.14.0
 scipy==1.16.0
 protobuf
@@ -123,7 +123,7 @@ flax
 optimum
 optimum-quanto
 torchao
-# xformers>=0.0.30 --index-url https://download.pytorch.org/whl/cu128
+xformers>=0.0.32 --index-url https://download.pytorch.org/whl/cu128
 bitsandbytes
 onnxruntime-gpu
 faiss-gpu
