--- a/requirements/windows_amd64_wsl2_cu128/requirements_ai_models.txt
+++ b/requirements/windows_amd64_wsl2_cu128/requirements_ai_models.txt
@@ -36,10 +36,13 @@ mistralai
 xai-sdk
 ollama>=0.5.3
 lmstudio>=1.4.1
-unstructured[pdf]>=0.18.11
+unstructured[all-docs]>=0.18.11
 langchain[community, anthropic, openai, google-genai, ollama, huggingface, perplexity, xai, mistralai]>=0.3.27
 langchain-chroma>=0.1.2
 langchain-neo4j>=0.4.0
+langchain-unstructured
+langchain-mcp-adapters
+langgraph
 qwen-vl-utils
 qwen-omni-utils
 gptqmodel==4.0.0
@@ -61,7 +64,7 @@ wavmark
 whisper-timestamped
 gguf
 # llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
-llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
+llama-cpp-python --index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
 # llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/metal
 stable-diffusion-cpp-python
 tipo-kgen
@@ -78,7 +81,7 @@ scikit-learn
 beautifulsoup4==4.13.5
 sympy==1.14.0
 scipy==1.16.0
-protobuf
+protobuf==5.29.5
 packaging==25.0
 fsspec==2025.3.0
 pyyaml==6.0.2
@@ -108,10 +111,10 @@ neo4j
 # fast_langdetect
 # langid
 
-tensorflow
+tensorflow<2.20.0
 tensorboard
 keras
-# tf-keras
+tf-keras
 torch>=2.8.0 --index-url https://download.pytorch.org/whl/cu128
 torchvision
 torchaudio
@@ -123,6 +126,8 @@ flax
 optimum
 optimum-quanto
 torchao
+iopath
+layoutparser
 xformers>=0.0.32 --index-url https://download.pytorch.org/whl/cu128
 bitsandbytes
 onnxruntime-gpu
