--- a/requirements/macos_arm64/requirements.txt
+++ b/requirements/macos_arm64/requirements.txt
@@ -9,7 +9,7 @@ scikit-learn
 beautifulsoup4==4.13.5
 sympy==1.14.0
 scipy==1.16.0
-protobuf
+protobuf==5.29.5
 packaging==25.0
 fsspec==2025.3.0
 pyyaml==6.0.2
@@ -33,10 +33,10 @@ easyocr
 pdf2image
 neo4j
 
-tensorflow
+tensorflow<2.20.0
 tensorboard
 keras
-# tf-keras
+tf-keras
 tensorflow-metal
 torch>=2.8.0
 torchvision
@@ -49,6 +49,8 @@ flax
 # optimum
 # optimum-quanto
 # torchao
+iopath
+layoutparser
 # xformers
 # bitsandbytes
 onnxruntime
