--- a/requirements/linux_amd64_cuda_cu126/requirements.txt
+++ b/requirements/linux_amd64_cuda_cu126/requirements.txt
@@ -33,18 +33,18 @@ easyocr
 pdf2image
 neo4j
 
-tensorflow<2.20.0
+# tensorflow<2.20.0
 tensorboard
-keras
-tf-keras
+# keras
+# tf-keras
 torch>=2.8.0 --index-url https://download.pytorch.org/whl/cu126
 torchvision
 torchaudio
-jax
-jaxlib
-jaxtyping
-jax[cuda12]
-flax
+# jax
+# jaxlib
+# jaxtyping
+# jax[cuda12]
+# flax
 optimum
 optimum-quanto
 torchao
