--- a/requirements/macos_arm64/requirements_ai_models.txt
+++ b/requirements/macos_arm64/requirements_ai_models.txt
@@ -34,6 +34,7 @@ anthropic>=0.64.0
 google-genai>=1.32.0
 mistralai
 xai-sdk
+perplexityai
 ollama>=0.5.3
 lmstudio>=1.4.1
 unstructured[all-docs]>=0.18.11
@@ -119,19 +120,19 @@ easyocr
 pdf2image
 neo4j
 
-tensorflow<2.20.0
+# tensorflow<2.20.0
 tensorboard
-keras
-tf-keras
-tensorflow-metal
+# keras
+# tf-keras
+# tensorflow-metal
 torch>=2.8.0
 torchvision
 torchaudio
-jax
-jaxlib
-jaxtyping
-jax-metal
-flax
+# jax
+# jaxlib
+# jaxtyping
+# jax-metal
+# flax
 # optimum
 # optimum-quanto
 # torchao
