--- a/requirements/windows_amd64_wsl2_cu128/requirements.txt
+++ b/requirements/windows_amd64_wsl2_cu128/requirements.txt
@@ -39,18 +39,18 @@ neo4j
 # fast_langdetect
 # langid
 
-tensorflow<2.20.0
+# tensorflow<2.20.0
 tensorboard
-keras
-tf-keras
+# keras
+# tf-keras
 torch>=2.8.0 --index-url https://download.pytorch.org/whl/cu128
 torchvision
 torchaudio
-jax
-jaxlib
-jaxtyping
-jax[cuda12]
-flax
+# jax
+# jaxlib
+# jaxtyping
+# jax[cuda12]
+# flax
 optimum
 optimum-quanto
 torchao
