--- a/requirements/linux_amd64_cuda_cu128/requirements.txt
+++ b/requirements/linux_amd64_cuda_cu128/requirements.txt
@@ -33,6 +33,13 @@ easyocr
 pdf2image
 neo4j
 
+num2words
+spacy
+spacy-curated-transformers
+phonemizer-fork
+espeakng-loader
+g2p_en
+
 # tensorflow<2.20.0
 tensorboard
 # keras
