--- a/requirements/windows_amd64_native_cu128/requirements_ai_models.txt
+++ b/requirements/windows_amd64_native_cu128/requirements_ai_models.txt
@@ -57,7 +57,7 @@ samplerate
 pyworld
 ffmpeg-python
 funasr
-pyopenjtalk-plus
+pyopenjtalk
 openai-whisper
 openai-harmony
 Faster_whisper
@@ -105,6 +105,13 @@ pytesseract
 easyocr
 pdf2image
 neo4j
+
+num2words
+spacy
+spacy-curated-transformers
+phonemizer-fork
+espeakng-loader
+g2p_en
 
 # fasttext
 # txtsplit
