change mlx_vlm commit on requirements

--- a/requirements/macos_arm64/requirements.txt
+++ b/requirements/macos_arm64/requirements.txt
@@ -48,10 +48,10 @@ tensorboard
 torch>=2.8.0
 torchvision
 torchaudio
-# jax
-# jaxlib
-# jaxtyping
-# jax-metal
+jax
+jaxlib
+jaxtyping
+jax-metal
 # flax
 # optimum
 # optimum-quanto
