--- a/requirements/windows_amd64_wsl2_cu128/requirements.txt
+++ b/requirements/windows_amd64_wsl2_cu128/requirements.txt
@@ -9,9 +9,9 @@ scikit-learn
 beautifulsoup4==4.13.5
 sympy==1.14.0
 scipy==1.16.0
-protobuf==5.29.5
+protobuf
 packaging==25.0
-fsspec==2025.3.0
+fsspec
 pyyaml==6.0.2
 jinja2==3.1.6
 python-json-logger
