--- a/requirements/linux_amd64_cuda_cu126/requirements_ai_models.txt
+++ b/requirements/linux_amd64_cuda_cu126/requirements_ai_models.txt
@@ -7,7 +7,7 @@ tokenizers>=0.21.4
 diffusers[docs]>=0.35.0
 peft>=0.17.0
 trl>=0.21.0
-huggingface_hub[cli, hf_transfer, hf_xet, mcp]>=0.34.4
+huggingface_hub[cli, hf_transfer, hf_xet, mcp]>=0.34.4,<1.0.0
 k_diffusion==0.0.12
 hf_transfer>=0.1.9
 hf_xet<2.0.0
@@ -24,6 +24,12 @@ fastmcp
 accelerate>=1.10.0
 basicsr>=1.4.2
 groq>=0.31.0
+together
+replicate
+tavily-python
+fireworks-ai
+novita-sandbox
+cohere
 spaces
 facexlib>=0.3.0
 gfpgan>=1.3.8
@@ -46,7 +52,7 @@ langchain-mcp-adapters
 langgraph
 qwen-vl-utils
 qwen-omni-utils
-gptqmodel==4.0.0
+gptqmodel>=4.0.0
 # gptqmodel @ git+https://github.com/ModelCloud/GPTQModel.git@29402342228414b81020a28a4c5b5828c1e76d59
 jiwer
 gtts>=2.5.4
@@ -70,6 +76,7 @@ llama-cpp-python --index-url https://abetlen.github.io/llama-cpp-python/whl/cu12
 stable-diffusion-cpp-python
 tipo-kgen
 nexaai
+a2a-sdk[http-server]>=0.3.0
 
 setuptools
 wheel
