Refactor environment configuration to use a centralized path for .env files. Update .env.example with new variable names and paths. Modify environment manager functions to ensure compatibility with the new structure. Adjust MCP client manager to reference the updated configuration path.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-AI_COMPANION_ROOTDIR = "/Place/your/path/here/ai-companion"
-AI_COMPANION_MCP_CONFIG = "${AI_COMPANION_ROOTDIR}/mcp_servers.json"
-AI_COMPANION_API_CONFIG = "${AI_COMPANION_ROOTDIR}/config/environment.env"
+AI_COMPANION_CONFIG_ROOT = "${HOME}/.ai-companion"
+AI_COMPANION_MCP_CONFIG = "${AI_COMPANION_CONFIG_ROOT}/mcp_servers.json"
+AI_COMPANION_API_CONFIG = "${AI_COMPANION_CONFIG_ROOT}/config/environment.env"
 
 OPENAI_API_KEY=sk-your-api-key-here
 ANTHROPIC_API_KEY=sk-ant-your-api-key-here
