Enhance application functionality by integrating FastAPI server for improved API management and adding support for OAuth 2.1 authentication in the MCP client. Update Gradio app launch parameters and refactor argument parsing for better clarity. Replace deprecated dependencies and introduce new file type handling for multimodal inputs. Update requirements across various platforms to reflect changes in dependencies.

--- a/requirements/macos_arm64/requirements.txt
+++ b/requirements/macos_arm64/requirements.txt
@@ -63,7 +63,6 @@ layoutparser
 # bitsandbytes
 onnxruntime
 faiss-cpu
-eva-decord;  python_version < '3.12'
-eva-decord-plus; python_version == '3.12'
+decord2
 opencc
 mlx[dev]
