--- a/requirements/windows_amd64_native_cu128/requirements.txt
+++ b/requirements/windows_amd64_native_cu128/requirements.txt
@@ -67,6 +67,6 @@ xformers --index-url https://download.pytorch.org/whl/cu128
 bitsandbytes
 onnxruntime
 # faiss-cpu
-eva-decord
+decord2
 opencc
 triton-windows
