--- a/requirements/linux_amd64_cuda_cu128/requirements.txt
+++ b/requirements/linux_amd64_cuda_cu128/requirements.txt
@@ -62,7 +62,7 @@ xformers>=0.0.32 --index-url https://download.pytorch.org/whl/cu128
 bitsandbytes
 onnxruntime-gpu
 faiss-gpu
-eva-decord
+decord2
 opencc==1.1.1
 triton
 # vllm
